edited css for background overflow and fixed game history indexes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -149,6 +149,7 @@ body, html {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  overflow-y:scroll;
 }
 .home-container button:hover, .home-container-2 button:hover{
   background-color: #ae4c4c;
